services/fd-tagging-tool/src/test/resources/invalid/TwoSameTags/TwoSameTags.tg
package invalid.TwoSameTags;

tagging TwoSameTags {
    feature Car contains source;
    feature Car contains sink;
}
